--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+scikit-learn (0.9.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 17 Oct 2011 23:49:47 -0400
+
 scikit-learn (0.8.1.dfsg-1) unstable; urgency=low
 
   * New upstream maintenance release
