--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-scikit-learn (0.9.0-1) unstable; urgency=low
+scikit-learn (0.9.0.dfsg-1) unstable; urgency=low
 
   * New upstream release
+  * Enabled all unittests and ignored failures on doctests:
+    https://github.com/scikit-learn/scikit-learn/issues/401
 
  -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 17 Oct 2011 23:49:47 -0400
 
