add the whats_new entry

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -27,6 +27,13 @@ Changelog
   graph, which would add explicitly zeros on the diagonal even when already
   present. :issue:`12105` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.compose`
+......................
+
+- |Fix| Fixed a bug in :class:`compose.ColumnTransformer` where it failed
+  given columns of mixed types with a single transformer.
+  :issue:`11912` by :user:`Adrin Jalali <adrinjalali>`.
+
 :mod:`sklearn.ensemble`
 .......................
 
