--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -30,8 +30,8 @@ Changelog
 :mod:`sklearn.compose`
 ......................
 
-- |Fix| Fixed a bug in :class:`compose.ColumnTransformer` where it failed
-  given columns of mixed types with a single transformer.
+- |Fix| Fixed an issue in :class:`compose.ColumnTransformer` with stacking
+  columns of mixed types with sparse matrices.
   :issue:`11912` by :user:`Adrin Jalali <adrinjalali>`.
 
 :mod:`sklearn.ensemble`
