--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -27,6 +27,20 @@ Changelog
   graph, which would add explicitly zeros on the diagonal even when already
   present. :issue:`12105` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.compose`
+......................
+
+- |Fix| Fixed an issue in :class:`compose.ColumnTransformer` when stacking
+  columns with types not convertible to a numeric.
+  :issue:`11912` by :user:`Adrin Jalali <adrinjalali>`.
+
+:mod:`sklearn.datasets`
+............................
+
+- |Fix| Fixed integer overflow in :func:`datasets.make_classification`
+  for values of ``n_informative`` parameter larger than 64.
+  :issue:10811 by :user:`Roman Feldbauer <VarIr>`.
+
 :mod:`sklearn.ensemble`
 .......................
 
