--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -48,6 +48,15 @@ Support for Python 3.4 and below has been officially dropped.
   to set and that scales better, by :user:`Shane <espg>` and
   :user:`Adrin Jalali <adrinjalali>`.
 
+
+:mod:`sklearn.preprocessing`
+............................
+
+- |Efficiency| Speed improvement in :class:`preprocessing.PolynomialFeatures`,
+  in the dense case. Also added a new parameter ``order`` which control output
+  order for further speed performances. :issue:`12249` by `Tom Dupre la Tour`_.
+
+
 Multiple modules
 ................
 
