maintenance note not needed in what's new

--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -53,7 +53,7 @@ Support for Python 3.4 and below has been officially dropped.
 
 - |Feature| Add :func:`metrics.multilabel_confusion_matrix`, which enables
   the calculation of recall, specificity, fall out and miss rate,
-  and makes :func:`metrics.precision_recall_fscore_support` cleaner.
+  among other binary metrics.
   :issue:`11179` by :user:`Shangwu Yao <ShangwuYao>`.
 
 Multiple modules
