--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -52,7 +52,7 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.preprocessing`
 ............................
 
-- |Efficiency| Speed improvement in :class:`preprocessing.PolynomialFeatures`,
+- |Efficiency| |API| Speed improvement in :class:`preprocessing.PolynomialFeatures`,
   in the dense case. Also added a new parameter ``order`` which control output
   order for further speed performances. :issue:`12251` by `Tom Dupre la Tour`_.
 
