--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -27,6 +27,12 @@ Changelog
   graph, which would add explicitly zeros on the diagonal even when already
   present. :issue:`12105` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.dataset`
+......................
+
+- |Fix| :func:`dataset.fetch_openml` to correctly use the local cache.
+  :issue:`12246` by :user:`Jan N. van Rijn <janvanrijn>`.
+
 :mod:`sklearn.ensemble`
 .......................
 
