add whats_new note about new MDS parameter and use assert_allclose

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -101,6 +101,11 @@ Linear, kernelized and related models
   underlying implementation is not random.
   :issue:`9497` by :user:`Albert Thomas <albertcthomas>`.
 
+Manifolds
+
+- Add `normalize` parameter to
+  :class:`manifold/MDS` to return the normalized stress-1 value, see :issue:`10168`
+
 Bug fixes
 .........
 
