--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -48,6 +48,10 @@ Support for Python 3.4 and below has been officially dropped.
   function of other features in a round-robin fashion. :issue:`8478` by
   :user:`Sergey Feldman <sergeyf>`.
 
+- |Enhancement| :class:`impute.IterativeImputer` now samples from a truncated normal
+  distribution instead of a clipped normal distribution when ``sample_posterior=True``.
+  :issue:`12177` by :user:`Ben Lawson <benlawson>`.
+
 Multiple modules
 ................
 
