--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -52,6 +52,14 @@ Support for Python 3.4 and below has been officially dropped.
   graph, which would add explicitly zeros on the diagonal even when already
   present. :issue:`12105` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.neighbors`
+......................
+
+- |Fix| Fixed a bug in :class:`sklearn.neighbors`
+Calling NearestNeighbors.{kneighbors,radius_neighbors}_graph
+without first fitting should raise `NotFittedError`.
+:issue:`12279` by :user:`Krishna Sangeeth <whiletruelearn>`.
+
 Multiple modules
 ................
 
