--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -51,6 +51,12 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.preprocessing`
 ............................
 
+- |Feature| |Efficiency| :class:`preprocessing.PolynomialFeatures` now supports
+  compressed sparse row (CSR) matrices as input for degrees 2 and 3. This is
+  typically much faster than the dense case as it scales with matrix density and
+  expansion degree, and is much, much faster than the compressed sparse column
+  (CSC) case. :issue:`12197` by `Andrew Nystrom <awnystrom>`.
+
 - |Efficiency| |API| Speed improvement in :class:`preprocessing.PolynomialFeatures`,
   in the dense case. Also added a new parameter ``order`` which controls output
   order for further speed performances. :issue:`12251` by `Tom Dupre la Tour`_.
