--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -54,7 +54,7 @@ Support for Python 3.4 and below has been officially dropped.
 - |MajorFeature| Added :class:`semi_supervised.SelfTrainingClassifier`, a 
   meta-classifier that allows any supervised classifier to function as a 
   semi-supervised classifier that can learn from unlabeled data. :issue:`11682`
-  by :user:`Oliver Rausch <orausch>` and :user:`Patrice Becker <pr0duktiv`.
+  by :user:`Oliver Rausch <orausch>` and :user:`Patrice Becker <pr0duktiv>`.
 
 :mod:`sklearn.preprocessing`
 ............................
