--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -59,6 +59,14 @@ Support for Python 3.4 and below has been officially dropped.
   in the dense case. Also added a new parameter ``order`` which controls output
   order for further speed performances. :issue:`12251` by `Tom Dupre la Tour`_.
 
+:mod:`sklearn.manifold`
+............................
+
+- |Efficiency| Make :func:`tsne.trustworthiness` use an inverted index
+  instead of an `np.where` lookup to find the rank of neighbors in the input
+  space. This improves trustworthiness in particular when computed with
+  lots of neighbors and/or small datasets.
+  :issue:`9906` by :user:`William de Vazelhes <wdevazelhes>`.
 
 Multiple modules
 ................
