Better structuring of sentence

--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -56,9 +56,8 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.metrics`
 ......................
 
-- |Feature| A new regression metric: :class:`metrics.max_error`: a
-  metric that captures the maximum residual error and a corresponding
-  ``'max_error'`` scorer for single output regression .
+- |Feature| Added the :func:`metrics.max_error` and a corresponding
+  ``'max_error'`` scorer for single output regression.
   :issue:`12232` by :user:`Krishna Sangeeth <whiletruelearn>`.
 
 
