--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -18,6 +18,18 @@ occurs due to changes in the modelling logic (bug fixes or enhancements), or in
 random sampling procedures.
 
 - please add class and reason here (see version 0.20 what's new)
+- :class:`ensemble.AdaBoostClassifier` (bug fix)
+- :class:`ensemble.AdaBoostRegressor` (bug fix)
+- :class:`ensemble.BaggingClassifier` (bug fix)
+- :class:`ensemble.BaggingRegressor` (bug fix)
+- :class:`ensemble.ExtraTreesClassifier` (bug fix)
+- :class:`ensemble.ExtraTreesRegressor` (bug fix)
+- :class:`ensemble.GradientBoostingClassifier` (bug fix)
+- :class:`ensemble.GradientBoostingRegressor` (bug fix)
+- :class:`ensemble.IsolationForest` (bug fix)
+- :class:`ensemble.RandomForestClassifier` (bug fix)
+- :class:`ensemble.RandomForestRegressor` (bug fix)
+- :class:`ensemble.RandomTreesEmbedding` (bug fix)
 - :class:`tree.DecisionTreeClassifier` (bug fix)
 - :class:`tree.DecisionTreeRegressor` (bug fix)
 - :class:`tree.ExtraTreeClassifier` (bug fix)
@@ -79,7 +91,8 @@ Support for Python 3.4 and below has been officially dropped.
   :class:`tree.DecisionTreeRegressor`, :class:`tree.ExtraTreeClassifier`,
   and :class:`tree.ExtraTreeRegressor`, where they used to exceed the given
   ``max_depth`` by 1 while expanding the tree if ``max_leaf_nodes`` and
-  ``max_depth`` were both specified by the user.
+  ``max_depth`` were both specified by the user. Please note that this also
+  affects all ensemble methods using decision trees.
   :pr:`12344` by :user:`Adrin Jalali <adrinjalali>`.
 
 
