--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -86,6 +86,16 @@ Changelog
 - |Fix| Fixed bug in :class:`preprocessing.OrdinalEncoder` when passing
   manually specified categories. :issue:`12365` by `Joris Van den Bossche`_.
 
+:mod:`sklearn.utils`
+........................
+
+- |Fix| Use float64 for mean accumulator in
+  :func:`utils.extmath._incremental_mean_and_var` to avoid floating point
+  precision issues when using float32 datasets. Affects
+  :class:`preprocessing.StandardScaler` and
+  :class:`decomposition.IncrementalPCA`.
+  :issue:`12333` by :user:`bauks <bauks>`.
+
 .. _changes_0_20:
 
 Version 0.20.0
