--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -51,6 +51,12 @@ Changelog
   for values of ``n_informative`` parameter larger than 64.
   :issue:`10811` by :user:`Roman Feldbauer <VarIr>`.
 
+  :mod:`sklearn.decomposition`
+  ............................
+- |Fix| :class:`decomposition.IncrementalPCA` to use larger final batch
+  combining last two batches and prevent insufficient sample size for SVD.
+  :issue:`12234` by :user:`Ming Li <minggli>`.
+
 :mod:`sklearn.ensemble`
 .......................
 
@@ -150,7 +156,7 @@ occurs due to changes in the modelling logic (bug fixes or enhancements), or in
 random sampling procedures.
 
 - :class:`cluster.MeanShift` (bug fix)
-- :class:`decomposition.IncrementalPCA` in Python 2 (bug fix)
+- :class:`decomposition.IncrementalPCA` in Python 2 and larger final batch (bug fix)
 - :class:`decomposition.SparsePCA` (bug fix)
 - :class:`ensemble.GradientBoostingClassifier` (bug fix affecting feature importances)
 - :class:`isotonic.IsotonicRegression` (bug fix)
