--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -12,6 +12,16 @@ Version 0.20.1
 This is a bug-fix release with some minor documentation improvements and
 enhancements to features released in 0.20.0.
 
+Changed models
+--------------
+
+The following estimators and functions, when fit with the same data and
+parameters, may produce different models from the previous version. This often
+occurs due to changes in the modelling logic (bug fixes or enhancements), or in
+random sampling procedures.
+
+- :class:`decomposition.IncrementalPCA` (bug fix)
+
 Changelog
 ---------
 
@@ -53,8 +63,10 @@ Changelog
 
 :mod:`sklearn.decomposition`
 ............................
-- |Fix| :class:`decomposition.IncrementalPCA` to use larger final batch
-  combining last two batches and prevent insufficient sample size for SVD.
+
+- |Fix| Fixed a regression in :class:`decomposition.IncrementalPCA` where
+  0.20.0 raised an error if the number of samples in the final batch for
+   fitting IncrementalPCA was smaller than n_components.
   :issue:`12234` by :user:`Ming Li <minggli>`.
 
 :mod:`sklearn.ensemble`
@@ -156,7 +168,7 @@ occurs due to changes in the modelling logic (bug fixes or enhancements), or in
 random sampling procedures.
 
 - :class:`cluster.MeanShift` (bug fix)
-- :class:`decomposition.IncrementalPCA` in Python 2 and larger final batch (bug fix)
+- :class:`decomposition.IncrementalPCA` in Python 2 (bug fix)
 - :class:`decomposition.SparsePCA` (bug fix)
 - :class:`ensemble.GradientBoostingClassifier` (bug fix affecting feature importances)
 - :class:`isotonic.IsotonicRegression` (bug fix)
