fix whats_new entry

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -38,8 +38,8 @@ Changelog
   even if all transformation results are sparse. :issue:`12304` by `Andreas
   Müller`_.
 
-- |API| :func:`compose.make_column_transformer` now expects
-  `(transformer, columns)` instead of `(columns, transformer)`.
+- |API| :class:`compose.ColumnTransformer` now expects
+  `(columns, transformer)` instead of `(transformer, columns)`.
   :issue:`12339` by :user:`Adrin Jalali <adrinjalali>`.
 
 :mod:`sklearn.datasets`
