--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -44,7 +44,7 @@ Support for Python 3.4 and below has been officially dropped.
 ......................
 
 - |Enhancement| add ``metric_params`` parameter to :class:`manifold.TSNE`
-  constructor for additional parameters of distance criteria to use in
+  constructor for additional parameters of distance metric to use in
   optimization. :issue:`11793` by :user:`Muneeb Aadil <muneebaadil>`.
 
 :mod:`sklearn.linear_model`
