Fixed spacing and other minor details

--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -110,9 +110,9 @@ Support for Python 3.4 and below has been officially dropped.
 :mod:`sklearn.metrics`
 ......................
 
-- |API| The metrics.calinski_harabaz_score has been renamed  to 
-  metrics.calinski_harabasz_score and will be removed in version 0.23
-  :issue:`8657` by :user:`Mark Hannel <markhannel>`, 
+- |API| The :func:`metrics.calinski_harabaz_score` has been renamed to 
+  :func:`metrics.calinski_harabasz_score` and will be removed in version 0.23.
+  :issue:`12211` by :user:`Mark Hannel <markhannel>`, 
   :user:`Melissa Ferrari <mferrari3>` and :user:`Lisa Thomas <LisaThomas9>`.
 
 Multiple modules
