add a test and fix whats_new entry

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -39,7 +39,7 @@ Changelog
   Müller`_.
 
 - |API| :class:`compose.ColumnTransformer` now expects
-  `(columns, transformer)` instead of `(transformer, columns)`.
+  `(name, columns, transformer)` instead of `(name, transformer, columns)`.
   :issue:`12339` by :user:`Adrin Jalali <adrinjalali>`.
 
 :mod:`sklearn.datasets`
