--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -60,7 +60,7 @@ Changelog
 
 - |Fix| Fixed a bug affecting :class:`ensemble.BaggingClassifier`,
   :class:`ensemble.BaggingRegressor` and :class:`ensemble.IsolationForest`,
-  where max_features was sometimes rounded down to zero.
+  where ``max_features`` was sometimes rounded down to zero.
   :issue:`12386` by :user:`Connor Tann <Connossor>`.
 
 :mod:`sklearn.linear_model`
