--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -111,7 +111,7 @@ Changelog
   "euclidean". :issue:`12481` by :user:`Jérémie du Boisberranger <jeremiedbb>`.
 - |Feature| Added ancalibration loss metric for classification models 
   which is calculated based on CalB. :issue:`12479` by 
-  :user:`Aishwarya Srinivasan` <aishgrt1>
+  :user:`Aishwarya Srinivasan <aishgrt1>`
 
 Miscellaneous
 .............
