update doc/whats_new/0.20 with Fix notification for issue 12462

--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -1253,9 +1253,8 @@ Miscellaneous
   happens immediately (i.e., without a deprecation cycle).
   :issue:`11741` by `Olivier Grisel`_.
 
-- |Fix| Fixed a bug in validation.py where :func: `_num_samples()` would not properly
-  handle checking the shape of Dask DataFrames after an update to Dask. 
-  :issue:`12462` by :user:`zwmiller`
+- |Fix| Fixed a bug in validation helpers where passing a Dask DataFrame results
+  in an error. :issue:`12462` by :user:`Zachariah Miller <zwmiller>`
 
 Changes to estimator checks
 ---------------------------
