--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -131,7 +131,7 @@ Support for Python 3.4 and below has been officially dropped.
 
 :mod:`sklearn.svm`
 ..................
-- |Feature| |API| :class:`svm.SVC` and :class:`NuSVC` now accept a `break_ties`
+- |Enhancement| :class:`svm.SVC` and :class:`NuSVC` now accept a `break_ties`
   parameter. This parameter results in `predict` breaking the ties the same way
   it is done in `decision_function`, if `decision_function_shape`='ovr', and
   number of target classes > 2.
