--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -66,6 +66,14 @@ Support for Python 3.4 and below has been officially dropped.
   communication overhead. :issue:`12543` by :user:`Isaac Storch <istorch>`
   and `Olivier Grisel`_.
 
+- |API| :func:`ensemble.partial_dependence` and
+  :func:`ensemble.plot_partial_dependence` are now deprecated in favor of
+  :func:`partial_dependence.partial_dependence<sklearn.partial_dependence.partial_dependence>`
+  and
+  :func:`partial_dependence.plot_partial_dependence<sklearn.partial_dependence.plot_partial_dependence>`.
+  :issue:TODO by :user:`Trevor Stephens<trevorstephens>` and :user:`Nicolas
+  Hug<NicolasHug>`.
+
 :mod:`sklearn.metrics`
 ......................
 
@@ -137,6 +145,13 @@ Support for Python 3.4 and below has been officially dropped.
   affects all ensemble methods using decision trees.
   :pr:`12344` by :user:`Adrin Jalali <adrinjalali>`.
 
+:mod:`sklearn.partial_dependence`
+.................................
+- |Feature| Partial dependence plots
+  (:func:`partial_dependence.plot_partial_dependence`) are now supported for
+  any regressor or classifier (provided that they have a `predict_proba()`
+  method). :issue:TODO by :user:`Trevor Stephens<trevorstephens>` and
+  :user:`Nicolas Hug<NicolasHug>`.
 
 Multiple modules
 ................
