--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -136,6 +136,8 @@ Support for Python 3.4 and below has been officially dropped.
   :issue:`12300` by :user:`Adrin Jalali <adrinjalali>`.
 
 - |Fix| Fixed an issue with :class:`tree.BaseDecisionTree`
+  and consequently all estimators based
+  on it, including :class:`tree.DecisionTreeClassifier`,
   :class:`tree.DecisionTreeRegressor`, :class:`tree.ExtraTreeClassifier`,
   and :class:`tree.ExtraTreeRegressor`, where they used to exceed the given
   ``max_depth`` by 1 while expanding the tree if ``max_leaf_nodes`` and
