--- a/doc/whats_new/v0.20.rst
+++ b/doc/whats_new/v0.20.rst
@@ -175,9 +175,9 @@ Changelog
 Miscellaneous
 .............
 
-- |Fix| Deprecated using joblib from `sklearn.utils` and removed all
-  mentions to `sklearn.externals.joblib`. Only `parallel_backend` and
-  `register_parallel_backend` are accessible in `utils`.
+- |Fix| Removed all mentions of `sklearn.externals.joblib`, and deprecated
+  joblib methods exposed in `sklearn.utils`, except for
+  :func:`utils.parallel_backend` and :func:`utils.register_parallel_backend`.
   :issue:`12345` by :user:`Thomas Moreau <tomMoral>`
 
 - |Fix| When using site joblib by setting the environment variable
@@ -192,7 +192,6 @@ Miscellaneous
 .. _changes_0_20:
 
 Version 0.20.0
-
 ==============
 
 **September, 2018**
