--- a/doc/whats_new/v0.21.rst
+++ b/doc/whats_new/v0.21.rst
@@ -147,7 +147,7 @@ Support for Python 3.4 and below has been officially dropped.
   with the 'saga' solver. :issue:`11646` by :user:`Nicolas Hug <NicolasHug>`.
 
 - |Fix| Fixed a bug in the 'saga' solver where the weights would not be
-  correctly updated in some cases :issue:`11646` by `Tom Dupre la Tour`_.
+  correctly updated in some cases. :issue:`11646` by `Tom Dupre la Tour`_.
 
 Multiple modules
 ................
